Terminé lo solicitado - me faltaron mixin pero no me alcanzó el tiempo

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -4,8 +4,11 @@
 @import 'layout/footer';
 @import 'layout/header';
 @import 'layout/nav';
+@import 'layout/suscription';
 @import 'components/box';
 @import 'components/card-x';
 @import 'components/card-y';
+@import 'components/login';
 @import 'components/marca-dl-cards';
-@import 'pages/registro'
+@import 'pages/registro';
+@import 'pages/detalle-post';
