--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,7 +27,7 @@ h3 {
   display: inline-block;
   padding: 20px;
   align-items: center;
-  justify-content: space-between;
+  /* justify-content: space-between; */
 }
 
 .fecha {
@@ -108,6 +108,7 @@ header {
 nav {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding: 0 20px;
   height: 65px;
 }
@@ -123,6 +124,50 @@ nav {
 
 .nav__texto--marca {
   font-size: 18px;
+}
+
+.marca-principal {
+  display: flex;
+  align-items: center;
+}
+
+.suscription {
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+
+.suscription__contenido {
+  background-color: #63af2b;
+  width: 100%;
+  border-radius: 15px;
+  padding: 15px;
+}
+
+.suscription__data {
+  display: flex;
+  justify-content: space-between;
+}
+
+.suscription__button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: azure;
+  color: gray;
+  width: 10%;
+  height: 50px;
+  border-radius: 10px;
+}
+
+.suscripcion__titulo {
+  padding-left: 10px;
+  padding-bottom: 10px;
+}
+
+.suscripcion__titulo--text {
+  color: white;
 }
 
 .box {
@@ -187,6 +232,18 @@ nav {
   border-radius: 15px;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.boton-nav {
+  background-color: #63af2b;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.boton-nav__text {
+  color: white;
+  text-decoration: none;
+  font-weight: 700;
 }
 
 .marca-card {
@@ -254,5 +311,39 @@ button {
 
 .iniciar-sesion {
   color: black;
-  font-weight: 400;
+  font-weight: 700;
+  text-decoration: none;
+}
+
+.contenido-post {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 80%;
+}
+
+.detalle-post__titulo {
+  padding: 20px;
+}
+
+.contenido-post__cards {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.contenido-post__content {
+  background-color: lightblue;
+  border-radius: 10px;
+  width: 80%;
+  padding: 10px;
+}
+
+.contenido-post__image {
+  display: flex;
+  justify-content: center;
+}
+
+.contenido-post__parrafo p {
+  padding: 30px;
 }/*# sourceMappingURL=main.css.map */
