--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -26,7 +26,7 @@ h3{
     display: inline-block;
     padding: 20px;
     align-items: center;
-    justify-content: space-between;
+    /* justify-content: space-between; */
 }
 
 
