--- a/assets/sass/layout/_nav.scss
+++ b/assets/sass/layout/_nav.scss
@@ -1,6 +1,7 @@
 nav{
     display: flex;
     align-items: center;
+    justify-content: space-between;
     padding: 0 20px;
     height: 65px;
 }
@@ -15,4 +16,9 @@ nav{
 
 .nav__texto--marca{
     font-size: 18px;
+}
+
+.marca-principal{
+    display: flex;
+    align-items: center;
 }
